--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
 }
 
-.container-fluid{
+.container-fluid {
     padding: 0;
     margin: 0;
 }
@@ -33,19 +33,22 @@ MARK GENERAL
 }
 
 .function {
-     background-color: #909CC2;
-     width: 100%;
-     max-width: 100%;
-    min-height: 100px;
-    text-align: center;
- }
-
-.usp {
-    background-color: #F7F5FB;
+    background-color: #18BC9C;
     width: 100%;
     max-width: 100%;
     min-height: 100px;
     text-align: center;
+    color: white;
+    padding: 40px 0;
+}
+
+.usp {
+    background-color: #fff;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100px;
+    text-align: center;
+    padding: 40px 0;
 }
 
 .footer {
@@ -55,13 +58,25 @@ MARK GENERAL
     min-height: 100px;
 }
 
-hr.separator{
-     height: 3px;
-     width: 5%;
-     border: none;
-     box-shadow: none;
-     background-color: #b1b1b1;
- }
+hr.separator1 {
+    height: 3px;
+    width: 5%;
+    border: none;
+    box-shadow: none;
+    background-color: #b1b1b1;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+hr.separator2 {
+    height: 3px;
+    width: 5%;
+    border: none;
+    box-shadow: none;
+    background-color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 
 /*********
 MARK HEADER
@@ -92,21 +107,6 @@ MARK HEADER
     line-height: 1;
 }
 
-/*----Nav Links----*/
-/*
-.header a {
-    color: white;
-    text-decoration: none;
-    font-size: 12px;
-}
-
-.header a:hover {
-    color: orange;
-    text-decoration: none;
-}
-*/
-/*----END----*/
-
 /*********
 MARK BANNER
 **********/
@@ -119,7 +119,7 @@ MARK BANNER
 
 .formAccueil {
     margin-top: 20%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 40px;
     border-radius: 5px;
 }
@@ -129,12 +129,16 @@ MARK BANNER
     color: white;
 }
 
-.btn-custom:hover{
+.btn-custom:hover {
     background-color: #2C3F51;
     color: white;
 }
 
-@media screen and (max-width: 768px){
+/*********
+MARK MEDIAQUERIES
+**********/
+
+@media screen and (max-width: 768px) {
     .navbar-nav-custom {
         float: left;
         /*width: 100%;*/
@@ -143,18 +147,11 @@ MARK BANNER
 
     .formAccueil {
         margin-top: 70%;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0, 0, 0, 0.5);
         padding: 20px;
         border-radius: 5px;
     }
 }
 
-/*********
-MARK USP
-**********/
 
-.inner-usp {
-    margin-top: 40px;
-    margin-bottom: 20px;
-}
 
