--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ MARK GENERAL
 **********/
 
 .header {
-    background-color: #3fbcff;
+    background-color: #2C3F51;
     width: 100%;
     max-width: 100%;
 }
@@ -52,7 +52,7 @@ MARK GENERAL
 }
 
 .footer {
-    background-color: #303030;
+    background-color: #2C3F51;
     width: 100%;
     max-width: 100%;
     min-height: 100px;
