--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ MARK GENERAL
     max-width: 100%;
     min-height: 100px;
     text-align: center;
-    line-height: 100px; !important;
+    line-height: 100px;
+!important;
     vertical-align: middle;
 }
 
@@ -137,7 +138,7 @@ MARK BANNER
     color: white;
 }
 
-.footcol{
+.footcol {
     line-height: 100px;
     vertical-align: middle;
 }
@@ -159,6 +160,93 @@ MARK BANNER
 .imghover:hover {
     width: 150px;
     height: 150px;
+}
+
+/*********
+MARK NOS OFFRES
+**********/
+
+.section1 {
+    text-align: center;
+}
+
+.section2 {
+    text-align: center;
+}
+
+.section3 {
+    text-align: center;
+
+}
+
+.image {
+    background: no-repeat center top;
+    background-size: cover;
+    height: 250px;
+    width: 350px;
+    white-space: nowrap;
+}
+
+.cadre {
+    padding: 3%;
+}
+
+ul {
+    text-align: center;
+}
+
+.liste {
+    text-align: left;
+}
+
+#title-v2 {
+    margin-top: 70px;
+}
+
+/*********
+MARK ABOUT
+**********/
+
+.about {
+    margin-top: 70px;
+}
+
+.bordureJaune {
+    border: none;
+    padding: 15px;
+    text-align: center;
+}
+
+.section1, .section2, .section3 {
+    min-height: 100px;
+    padding-bottom: 30px;
+}
+
+.histoire {
+    text-align: center;
+    /*padding-bottom: 0;*/
+}
+
+.inner-cont {
+    text-align: center;
+}
+
+.valeur {
+    padding-top: 0;
+}
+
+.recrute {
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+/*********
+MARK MENTIONS LEGALES
+**********/
+
+.mentionsleg h2 {
+    font-size: 30px;
+    margin: 20px 0;
 }
 
 /*********
